# duplicate-finder

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  maven_install.json  rules_jvm_external~5.2~maven~maven_install.json
src/main/java/duplicatefinder/: BUILD  DuplicateFinder.java  Main.java
src/test/java/duplicatefinder/: BUILD  DuplicateFinderTest.java
