bazel_dep(name = "rules_jvm_external", version = "5.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.beust:jcommander:jar:1.82",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.googlejavaformat:google-java-format:1.16.0",
        "com.google.guava:guava:31.1-jre",
        "junit:junit:4.13",
        "org.apache.logging.log4j:log4j-core:jar:2.20.0",
        "org.apache.logging.log4j:log4j-slf4j-impl:jar:2.20.0",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# Buildifier
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.1.0",
    dev_dependency = True,
)
